Tabbed view and draggability

--- a/AvalonWriter/App.axaml
+++ b/AvalonWriter/App.axaml
@@ -11,5 +11,6 @@
 
     <Application.Styles>
         <FluentTheme />
+        <StyleInclude Source="/Style.axaml" />
     </Application.Styles>
 </Application>
