--- a/AvalonWriter/Views/MainWindow.axaml
+++ b/AvalonWriter/Views/MainWindow.axaml
@@ -3,6 +3,7 @@
         xmlns:vm="using:AvalonWriter.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:views="clr-namespace:AvalonWriter.Views"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="AvalonWriter.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
@@ -32,30 +33,15 @@
         </ExperimentalAcrylicBorder>
         
         <Grid RowDefinitions="32,*,32" ColumnDefinitions="100,*,100">
-            <StackPanel Background="Black" Opacity="0.7" Grid.Row="0" Grid.ColumnSpan="4"></StackPanel>
-            
-            <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical">
-                <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White"/>
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                    <Button Command="{Binding DecrementCommand}" Foreground="White" Cursor="Hand" >
-                        <TextBlock Text="{Binding Amount, Mode=OneWay, StringFormat='\- {0}'}" />
-                    </Button>
-                    <TextBlock Text="{Binding Counter}" Foreground="White" VerticalAlignment="Center" Margin="10,0"/>
-                    <Button Command="{Binding IncrementCommand}" Foreground="White" Cursor="Hand">
-                        <TextBlock Text="{Binding Amount, Mode=OneWay, StringFormat='+ {0}'}" />
-                    </Button>
-                </StackPanel>
-                <Slider Minimum="1" Maximum="10" 
-                        Value="{Binding Amount}" 
-                        Cursor="Hand">
-                    <Slider.Styles>
-                        <Style Selector="Thumb">
-                            <Setter Property="ToolTip.Tip" Value="{Binding $parent[Slider].Value, Mode=OneWay, StringFormat={}{0:##}}" />
-                            <Setter Property="ToolTip.Placement" Value="Top" />
-                        </Style>
-                    </Slider.Styles>
-                </Slider>
+            <StackPanel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" 
+                        Orientation="Horizontal" 
+                        Background="Black" 
+                        Opacity="0.7" PointerPressed="InputElement_OnPointerPressed">
+                <Button Command="{Binding NewWindowCommand}">S</Button>
+                <Button Command="{Binding MainViewCommand}">Home</Button>
             </StackPanel>
+            
+            <Border Grid.Row="1" Grid.Column="1" Child="{Binding Content}" />
         </Grid>
     </Panel>
 
